--- a/samuel/atividade.html
+++ b/samuel/atividade.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="atividade.css">
+    <!-- Adicionando o Font Awesome para ícones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
@@ -13,15 +15,26 @@
     </header>
 
     <div class="imagens">
-        <img src="img/charlie e lola.jpg" alt="">
-        <img src="img/madeline.jpg" alt="">
-        <img src="img/penelope_charmosa.jpg" alt="">
-        <img src="img/toro e pancho.jpg" alt="">
+        <div class="imagem-container">
+            <img src="img/charlie e lola.jpg" alt="Charlie e Lola">
+            <div class="descricao">Charlie e Lola: é uma série de animação infantil baseada nos livros de Lauren Child, que conta as aventuras de Charlie, um menino de sete anos paciente e criativo, e sua irmã mais nova, Lola, uma menina de quatro anos cheia de energia, imaginação e opiniões fortes sobre o mundo.</div>
+        </div>
+        <div class="imagem-container">
+            <img src="img/madeline.jpg" alt="Madeline">
+            <div class="descricao">Madeline: é uma animação infantil sobre as aventuras de Madeline, a menor, mas a mais corajosa de doze meninas que vivem num internato em Paris com a sua tutora, a Senhorita Clavel.</div>
+        </div>
+        <div class="imagem-container">
+            <img src="img/penelope_charmosa.jpg" alt="Penélope Charmosa">
+            <div class="descricao">Penélope Charmosa: conta a história de uma jovem e rica herdeira, que está em constante perigo devido às armadilhas do seu guardião, o vilão Silvestre Soluço (Tião Gavião), que secretamente tenta apoderar-se da sua fortuna.</div>
+        </div>
+        <div class="imagem-container">
+            <img src="img/toro e pancho.jpg" alt="Toro e Pancho">
+            <div class="descricao">Toro e Pancho: é um desenho animado estadunidense (originalmente "Tijuana Toads") que mostrava as aventuras e confusões de dois sapos, Toro e Pancho, ao longo dos episódios</div>
     </div>
 
-    <footer>
-        <p>Contato: (19)14038-6721</p>
-        <p>Endereço: Rua Manuel Gomes, 333</p>
+    <footer class="pe">
+        <p><i class="fas fa-phone-alt"></i> Contato: (19)14038-6721</p>
+        <p><i class="fas fa-map-marker-alt"></i> Endereço: Rua Manuel Gomes, 333</p>
     </footer>
 
 </body>
