--- a/aula08/index.html
+++ b/aula08/index.html
@@ -30,7 +30,7 @@
         <div class="links-group">
             <a href="#" class="link-item">Página Inicial</a>
             <a href="#" class="link-item">Registre-se</a>
-            <a href="#" class="link-item">Esqueceu a senha?</a>
+            <a href="index2.html" class="link-item">Esqueceu a senha?</a>
         </div>
     </div>
 
